<resources>
    <string name="app_name">Dictionary</string>

    <string name="source">Original language</string>
    <string name="destination">Translation language</string>

    <string name="input_hint">Enter word or phrase</string>
    <string name="lookup">Lookup</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="translaton">Translation</string>
    <string name="means">Meanings</string>
    <string name="synonyms">Synonyms</string>
    <string name="examples">Examples</string>

    <string name="share_word">Share: %s</string>

    <string name="action_share">Share</string>
    <string name="action_history">History</string>
    <string name="action_settings">Settings</string>

    <string name="action_lookup_word">Lookup word</string>
    <string name="action_copy_translation">Copy translation</string>
    <string name="action_copy_meanings">Copy meanings</string>
    <string name="action_copy_synonyms">Copy synonyms</string>

    <string name="error">Error</string>
    <string name="error_share">Nothing to share</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_no_results">No results</string>
    <string name="error_langs">Cannot fetch languages</string>
    <string name="error_lang_not_supported">Translation direction is not supported</string>
    <string name="error_long_request">Query text is too long</string>
    <string name="error_no_app">No suitable application</string>

    <string name="msg_copied">Copied</string>
    <string name="msg_transcription_copied">Transcription copied</string>
    <string name="msg_history_empty">History is empty</string>

    <string name="pref_cat_other">Other</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_sharing">Sharing</string>
    <string name="pref_cat_search_options">Search options</string>
    <string name="pref_close_on_share">Close app after sharing a result</string>
    <string name="pref_close_on_share_sum">Only applies to main screen. Can behave differently among the apps</string>
    <string name="pref_include_transcription">Include transcription</string>
    <string name="pref_include_transcription_sum">Append transcription to sharing text</string>
    <string name="pref_open_source_libs">Open Source Libraries</string>
    <string name="pref_lookup_both">Lookup in both directions</string>
    <string name="pref_back_focus">Focus search field</string>
    <string name="pref_back_focus_sum">Move focus to the search field then pressing Back button</string>
    <string name="pref_yandex_dictionary">Powered by Yandex.Dictionary</string>
    <string name="pref_search_family">Family filter</string>
    <string name="pref_search_short_pos">Short parts of speech</string>
    <string name="pref_search_short_pos_sum">Display short forms for parts of speech</string>
    <string name="pref_search_morpho">Search by word form</string>
    <string name="pref_search_pos">Match part of speech</string>
    <string name="pref_search_pos_sum">Match part of speech for the search word and translation</string>
    <string name="pref_show_share_fab_sub">Show button for quick share</string>
    <string name="pref_show_share_fab">Quick share</string>

    <string name="dialog_history">Search history</string>

    <string name="toast_swap_langs">Swap languages</string>

    <string name="content_desc_more">More options</string>
    <string name="content_desc_swap_langs">Swap languages</string>
</resources>
