<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cat_general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="lookup_reverse"
            android:title="@string/pref_lookup_both"/>

        <Preference
            android:key="search_filters"
            android:fragment="com.italankin.dictionary.ui.settings.SettingsSearchOptionsFragment"
            android:title="@string/pref_cat_search_options"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_sharing">

        <SwitchPreference
            android:defaultValue="false"
            android:key="close_on_share"
            android:summary="@string/pref_close_on_share_sum"
            android:title="@string/pref_close_on_share"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_other">

        <Preference
            android:key="yandex_dict"
            android:title="@string/pref_yandex_dictionary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://tech.yandex.com/dictionary/"/>
        </Preference>

        <Preference
            android:key="open_source_libs"
            android:title="@string/pref_open_source_libs">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>