<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.translation.TranslationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/text_translation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/selector_dark"
                        android:textColor="#000"
                        android:textSize="@dimen/text_size_large"
                        tools:text="translation" />

                    <TextView
                        android:id="@+id/text_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_light"
                        android:textSize="@dimen/text_size_medium"
                        tools:text="position" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Means -->

            <androidx.cardview.widget.CardView
                android:id="@+id/card_means"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/purple"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/layout_means"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/means"
                        android:textColor="#fff"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--Synonyms -->

            <androidx.cardview.widget.CardView
                android:id="@+id/card_synonyms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/cyan"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/layout_synonyms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/synonyms"
                        android:textColor="#fff"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--Examples -->

            <androidx.cardview.widget.CardView
                android:id="@+id/card_examples"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/blue"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/layout_examples"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/examples"
                        android:textColor="#fff"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
